# persistence-gate

./: README.md  pyproject.toml
benchmark_data/: comprehensive_comparative_cases.jsonl
benchmarks/: __init__.py  analyze_stress_failures.py  comparative_benchmark.py  dirty_metadata_bias_audit.py  external_benchmark_suite.py  generate_gray_zone_comparative_cases.py  generate_synthetic_comparative_cases.py  generated_comparative_benchmark.py  github_real_issue_audit_export.py  github_real_issue_benchmark.py  gray_zone_profile_sensitivity_benchmark.py  multi_domain_stress_benchmark.py  quality_gate_report.py  run_product_benchmarks.py
docs/: dirty_metadata_bias_audit.md
examples/: __init__.py  chroma_vector_adapter_demo.py  generic_retriever_adapter_demo.py  github_real_data_demo.py  llm_response_comparison_demo.py  local_vector_adapter_demo.py  messy_github_memory_benchmark.py  rag_adapter_demo.py  score_manual_llm_responses.py
src/persistence_memory/: __init__.py  api.py  benchmark.py  controller.py  evaluation.py  intent.py  labeling.py  llm_eval.py  profiles.py  scorer.py  store.py
tests/: test_chroma_adapter.py  test_cli.py  test_comparative_benchmark.py  test_llm_eval.py  test_local_vector_adapter.py  test_multi_domain_stress_benchmark.py  test_quality_gate_report.py  test_retriever_adapter.py  test_role_intent_gating.py  test_snapshot_benchmark.py
