[project]
name = "persistence-memory"
version = "0.1.0"
description = "Persistence-aware memory controller for influence-gated retrieval"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "JayCamm" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
vector = ["chromadb>=0.5.0"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
